k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-dashboard-np
  labels:
    app: jira-dashboard
spec:
  type: NodePort
  selector:
    app: jira-dashboard
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
